--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
     "build": "tsc",
     "test": "env-cmd -f ./config/test.env vitest",
     "start": "node dist/user/server-listen.js",
-    "dev101": "nodemon dist/user/server-listen.js",
-    "dev102": "nodemon dist/user/proxy.js",
+    "dev1": "nodemon dist/user/server-listen.js",
+    "dev2": "nodemon dist/user/proxy.js",
+    "dev3": "nodemon dist/http_client/client.js",
     "debug" : "node inspect dist/user/server-listen.js"
   },
   "keywords": [],
