Updated nature of blacklist and whitelist to accept an array of strings instead of and spread parameter.

--- a/config/test.env
+++ b/config/test.env
@@ -1,2 +1,2 @@
-DIRNAME = C:\Users\Expel\OneDrive\Escritorio\vsCodeMain\My-Creations\server-uses-cryptocomet\dist\user/public
-PASSCODE = 
+DIRNAME = C:\Users\Expel\OneDrive\Escritorio\vsCodeMain\My-Creations\server-uses-cryptocomet\dist\user
+PROTOCOL = http
